--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   db:
@@ -53,7 +51,9 @@ services:
 
   # Backend API
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+    image: resumator-backend:latest   # 👈 tag the image
     environment:
       - DATABASE_URL=postgresql://resumator:password@db:5432/resumator
       - REDIS_URL=redis://redis:6379/0
@@ -83,24 +83,9 @@ services:
       retries: 3
     restart: unless-stopped
 
-  # Frontend
-  frontend:
-    build: ./frontend
-    ports:
-      - "3000:3000"
-    environment:
-      - REACT_APP_API_URL=http://localhost:8000
-      - REACT_APP_ENV=development
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    depends_on:
-      - backend
-    restart: unless-stopped
-
-  # Background Worker (optional)
+  # Background Worker
   worker:
-    build: ./backend
+    image: resumator-backend:latest   # 👈 reuse backend image
     environment:
       - DATABASE_URL=postgresql://resumator:password@db:5432/resumator
       - REDIS_URL=redis://redis:6379/0
@@ -118,19 +103,19 @@ services:
     command: python -m celery worker -A app.worker:celery_app --loglevel=info
     restart: unless-stopped
 
-  # Reverse Proxy (Caddy)
-  caddy:
-    image: caddy:2-alpine
+  # Frontend
+  frontend:
+    build: ./frontend
     ports:
-      - "80:80"
-      - "443:443"
+      - "3000:3000"
+    environment:
+      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_ENV=development
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - caddy_data:/data
-      - caddy_config:/config
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
-      - frontend
     restart: unless-stopped
 
 volumes:
@@ -138,8 +123,6 @@ volumes:
   redis_data:
   minio_data:
   storage_data:
-  caddy_data:
-  caddy_config:
 
 networks:
   default:
