--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,56 +1,57 @@
 # FastAPI and ASGI server
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-gunicorn==21.2.0
+fastapi
+uvicorn[standard]
+gunicorn
 
 # Database
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-alembic==1.12.1
+sqlalchemy
+psycopg2-binary
+alembic
 
 # Authentication & Security
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
 
 # Pydantic
-pydantic==2.5.0
-pydantic-settings==2.1.0
-email-validator==2.1.0
+pydantic
+pydantic-settings
+email-validator
 
 # AI Service
-groq==0.4.1
-requests==2.31.0
+groq
+requests
 
 # PDF Generation
-markdown==3.5.1
-jinja2==3.1.2
-pdfkit==1.0.0
-weasyprint==60.2
+markdown
+jinja2
+pdfkit
+weasyprint
 
 # Storage
-boto3==1.34.0
-minio==7.2.0
+boto3
+minio
 
 # Background Tasks (optional)
-celery==5.3.4
-redis==5.0.1
-rq==1.15.1
+celery
+redis
+rq
 
 # Utils
-python-dotenv==1.0.0
-pillow==10.1.0
-pypdf2==3.0.1
+python-dotenv
+pillow
+pypdf2
 
 # Development & Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-httpx==0.25.2
-factory-boy==3.3.0
+pytest
+pytest-asyncio
+pytest-cov
+httpx
+factory-boy
 
 # Logging & Monitoring
-structlog==23.2.0
+structlog
 
 # CORS
-python-cors==1.7.0
+flask-cors
+
