--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,7 +105,9 @@ services:
 
   # Frontend
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend 
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
