--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-markdown": "^6.2.4",
+    "@codemirror/state": "^6.4.0",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.23.0",
     "@heroicons/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-codemirror": "^4.21.21",
+    "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "codemirror": "^6.0.1",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
     "react-markdown": "^9.0.1",
-    "vite": "^7.1.5",
-    "@vitejs/plugin-react": "^4.0.0",
+    "react-router-dom": "^6.20.1",
     "remark-gfm": "^4.0.0",
-    "codemirror": "^6.0.1",
-    "@codemirror/lang-markdown": "^6.2.4",
-    "@codemirror/theme-one-dark": "^6.1.2",
-    "@codemirror/view": "^6.23.0",
-    "@codemirror/state": "^6.4.0",
-    "@codemirror/basic-setup": "^0.20.0",
-    "@uiw/react-codemirror": "^4.21.21",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0"
+    "vite": "^7.1.5"
   },
   "scripts": {
     "dev": "vite",
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
