added worker.py in backend, added init.sql (ask claude later about to write a better one) updated requirements claude added more css modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    command: python -m celery worker -A app.worker:celery_app --loglevel=info
+    command: python -m celery -A app.worker.celery_app worker --loglevel=info
     restart: unless-stopped
 
   # Frontend
