--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,8 @@ alembic
 
 # Authentication & Security
 python-jose[cryptography]
-passlib[bcrypt]
+passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
 python-multipart
 PyJWT
 
