css refoctor applications details and form and resumeviewpage

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,14 +1,27 @@
-FROM python:3.11-slim
+FROM python:3.11-bullseye
 
 WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
+    gcc \
+    g++ \
+    libpq-dev \
+    wkhtmltopdf \
+    xvfb \
+    fontconfig \
     curl \
+    libcairo2 \
+    pango1.0-tools \
+    libpango-1.0-0 \
+    libgdk-pixbuf2.0-0 \
+    libffi-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better Docker layer caching
 COPY requirements.txt .
+
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Install development dependencies
@@ -24,4 +37,4 @@ RUN mkdir -p /app/storage
 EXPOSE 8000
 
 # Development command (will be overridden by docker-compose.override.yml)
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
