security implementd, backend and frontend, added configs for deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,7 +27,10 @@ MINIO_BUCKET=resumator
 # Application Configuration
 APP_NAME=Resume Customizer
 DEBUG=false
+
+# Security
 AI_CALLS_PER_HOUR=50
+AUTH_ATTEMPTS_PER_HOUR=50
 
 # CORS
 CORS_ORIGINS=["http://localhost:3000", "http://localhost:5173", "http://localhost:8080"]
@@ -47,3 +50,5 @@ SENTRY_DSN=
 
 # Environment
 ENVIRONMENT=development
+
+
