--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.0.0",
     "codemirror": "^6.0.1",
     "date-fns": "^2.30.0",
+    "isomorphic-dompurify": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
