fixes , removed secureApi usage

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -45,10 +45,10 @@ SMTP_USER=
 SMTP_PASSWORD=
 EMAIL_FROM=noreply@resumator.com
 
-# Sentry (optional)
+# Sentry (optional) Sentry DSN for error tracking
 SENTRY_DSN=
 
 # Environment
-ENVIRONMENT=development
+ENVIRONMENT=dev
 
 
