--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -15,13 +15,14 @@ WORKDIR /app
 
 # Install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.prod.txt
 
 # Production stage
 FROM base as production
 
 # Copy application code
 COPY --chown=appuser:appuser . .
+COPY --chown=appuser:appuser ./entrypoint.prod.sh /app/entrypoint.prod.sh
 
 # Create necessary directories
 RUN mkdir -p /app/logs /app/storage && \
@@ -29,6 +30,7 @@ RUN mkdir -p /app/logs /app/storage && \
 
 # Switch to non-root user
 USER appuser
+ENTRYPOINT ["/app/entrypoint.prod.sh"] 
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
