# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # # On branch master # Your branch is up to date with 'origin/master'. # # Changes to be committed: #	modified:   DEPLOYMENT.md #	new file:   Dockerfile.prod #	modified:   backend/Dockerfile.prod #	new file:   backend/README.md #	modified:   backend/entrypoint.prod.sh #	modified:   docker-compose.prod.yml #	deleted:    frontend/Dockerfile.homelab #	new file:   frontend/Dockerfile.prod #	new file:   frontend/README.md #	new file:   frontend/nginx.conf #	new file:   frontend/prod_dockerfile_plan.md #

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -14,7 +14,7 @@ RUN groupadd -r appuser && useradd -r -g appuser appuser
 WORKDIR /app
 
 # Install Python dependencies
-COPY requirements.txt .
+COPY requirements.prod.txt .
 RUN pip install --no-cache-dir -r requirements.prod.txt
 
 # Production stage
