--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,5 +1,5 @@
 # Multi-stage build for production
-FROM python:3.11-slim as base
+FROM python:3.11-slim AS base
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -18,7 +18,7 @@ COPY requirements.prod.txt .
 RUN pip install --no-cache-dir -r requirements.prod.txt
 
 # Production stage
-FROM base as production
+FROM base AS production
 
 # Copy application code
 COPY --chown=appuser:appuser . .
