--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -2,10 +2,10 @@
 FROM python:3.11-slim AS base
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
-    wkhtmltopdf \
-    xvfb \
-    curl \
+RUN apt-get update && apt-get install -y --no-install-recommends wget xvfb curl \
+    && wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6.1-2/wkhtmltox_0.12.6.1-2.bullseye_amd64.deb \
+    && apt-get install -y ./wkhtmltox_0.12.6.1-2.bullseye_amd64.deb \
+    && rm ./wkhtmltox_0.12.6.1-2.bullseye_amd64.deb \
     && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
