--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -2,13 +2,11 @@
 FROM python:3.11-slim AS base
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends wget xvfb curl gnupg \
-    && wget http://security.debian.org/debian-security/pool/updates/main/o/openssl/libssl1.1_1.1.1w-0+deb11u1_amd64.deb \
-    && dpkg -i libssl1.1_1.1.1w-0+deb11u1_amd64.deb \
-    && rm libssl1.1_1.1.1w-0+deb11u1_amd64.deb \
-    && wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6.1-2/wkhtmltox_0.12.6.1-2.bullseye_amd64.deb \
-    && apt-get install -y ./wkhtmltox_0.12.6.1-2.bullseye_amd64.deb \
-    && rm ./wkhtmltox_0.12.6.1-2.bullseye_amd64.deb \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpango-1.0-0 \
+    libcairo2 \
+    libgdk-pixbuf-2.0-0 \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
