--- a/.gitignore
+++ b/.gitignore
@@ -304,7 +304,7 @@ migrations/versions/*.py
 # ========================
 # AI/ML
 # ========================
-models/
+# models/
 *.model
 *.pkl
 *.joblib
