--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -86,7 +86,7 @@ path_separator = os
 # file.
 # Example configuration for a local PostgreSQL database.
 # Replace with your actual database connection string.
-sqlalchemy.url = postgresql://resumator:password@localhost:5432/resumator
+sqlalchemy.url = %(DATABASE_URL)s
 
 
 [post_write_hooks]
