alembic issue database url

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -86,7 +86,8 @@ path_separator = os
 # file.
 # Example configuration for a local PostgreSQL database.
 # Replace with your actual database connection string.
-sqlalchemy.url = %(DATABASE_URL)s
+# This value is overridden by the migrations/env.py script
+sqlalchemy.url = postgresql://resumator:password@localhost:5432/resumator
 
 
 [post_write_hooks]
