--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -3,6 +3,12 @@ FROM python:3.11-slim AS base
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    python3-dev \
+    libglib2.0-dev \
+    libpango1.0-dev \
+    libffi-dev \
+    shared-mime-info \
     libpango-1.0-0 \
     libcairo2 \
     libgdk-pixbuf-2.0-0 \
@@ -24,6 +30,7 @@ FROM base AS production
 # Copy application code
 COPY --chown=appuser:appuser . .
 COPY --chown=appuser:appuser ./entrypoint.prod.sh /app/entrypoint.prod.sh
+COPY --chown=appuser:appuser ./entrypoint.worker.prod.sh /app/entrypoint.worker.prod.sh
 
 # Create necessary directories
 RUN mkdir -p /app/logs /app/storage && \
