--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -78,6 +78,7 @@ services:
     image: resumator-backend:${VERSION:-latest}
     container_name: resumator-worker
     restart: unless-stopped
+    entrypoint: /app/entrypoint.worker.prod.sh
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
