--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -32,6 +32,9 @@ COPY --chown=appuser:appuser . .
 COPY --chown=appuser:appuser ./entrypoint.prod.sh /app/entrypoint.prod.sh
 COPY --chown=appuser:appuser ./entrypoint.worker.prod.sh /app/entrypoint.worker.prod.sh
 
+# Make entrypoint scripts executable
+RUN chmod +x /app/entrypoint.prod.sh /app/entrypoint.worker.prod.sh
+
 # Create necessary directories
 RUN mkdir -p /app/logs /app/storage && \
     chown -R appuser:appuser /app/logs /app/storage
