update docker compose prod

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -52,10 +52,12 @@ services:
     container_name: resumator-backend
     restart: unless-stopped
     environment:
+      - ENVIRONMENT=prod
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
       - JWT_SECRET=${JWT_SECRET}
       - GROQ_API_KEY=${GROQ_API_KEY}
+      - GROQ_MODEL_NAME=${GROQ_MODEL_NAME}
       - ALLOWED_ORIGINS=["https://${RESUMATOR_DOMAIN}"]
     volumes:
       - storage_data:/app/storage
@@ -85,6 +87,7 @@ services:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
       - GROQ_API_KEY=${GROQ_API_KEY}
+      - GROQ_MODEL_NAME=${GROQ_MODEL_NAME}
     volumes:
       - storage_data:/app/storage
     command: ["python", "-m", "celery", "-A", "app.worker.celery_app", "worker", "--loglevel=info"]
