added backend tests structure and vitests

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -50,6 +50,9 @@ pytest-asyncio
 pytest-cov
 httpx
 factory-boy
+faker
+pytest-mock
+fakeredis
 
 # Logging & Monitoring
 structlog
@@ -59,4 +62,3 @@ slowapi>=0.1.9
 bleach>=6.0.0
 cryptography>=41.0.0
 validators>=0.22.0
-
