--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,8 +55,10 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.16",
+    "jsdom": "^27.0.1",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "vitest": "^4.0.3"
   },
   "proxy": "http://localhost:8000"
 }
