--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,9 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.23.0",
     "@heroicons/react": "^2.2.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@uiw/react-codemirror": "^4.21.21",
     "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.6.2",
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@vitest/coverage-v8": "^4.0.3",
     "autoprefixer": "^10.4.16",
     "jsdom": "^27.0.1",
     "postcss": "^8.4.32",
