--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@vitest/coverage-v8": "^4.0.3",
     "autoprefixer": "^10.4.16",
+    "identity-obj-proxy": "^3.0.0",
     "jsdom": "^27.0.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
